objects/Requirement__c.object
<CustomObject>
    <description>Requirement tracked by the Requirements Tracker application.</description>
    <fields>
        <fullName>AppirioDevHours__c</fullName>
        <description>Number of Development and analysis hours needed by Appirio</description>
        <label>Appirio Dev Hours</label>
        <precision>3</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Applies_to_Domain_Object__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Applies to Domain Object</label>
        <referenceTo>Domain_Object__c</referenceTo>
        <relationshipLabel>Requirements</relationshipLabel>
        <relationshipName>Requirements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Applies_to_Process__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Applies to Process</label>
        <referenceTo>Process__c</referenceTo>
        <relationshipLabel>Requirements</relationshipLabel>
        <relationshipName>Requirements_Supporting_Process</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Applies_to_Use_Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Applies to Use Case</label>
        <referenceTo>Use_Case__c</referenceTo>
        <relationshipLabel>Special Requirements</relationshipLabel>
        <relationshipName>Special_Requirements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Approach__c</fullName>
        <label>Proposed Approach</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CMC_Task__c</fullName>
        <label>CMC Task</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Coverage_Status__c</fullName>
        <formula>IF (  Test_Case_Count__c  &gt; 0, &quot;Covered&quot;, &quot;Not Covered&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Coverage Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Functional_Area__c</fullName>
        <description>Functional area for project work.</description>
        <inlineHelpText>Functional area for project work.</inlineHelpText>
        <label>Functional Area</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Configuration</fullName>
                </value>
                <value>
                    <fullName>Customization</fullName>
                </value>
                <value>
                    <fullName>Data Migration/Import</fullName>
                </value>
                <value>
                    <fullName>Integration</fullName>
                </value>
                <value>
                    <fullName>Out-of-Box</fullName>
                </value>
                <value>
                    <fullName>Business Process</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Level__c</fullName>
        <label>Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Global</fullName>
                </value>
                <value>
                    <fullName>Feature</fullName>
                </value>
                <value>
                    <fullName>Process</fullName>
                </value>
                <value>
                    <fullName>Object</fullName>
                </value>
                <value>
                    <fullName>Use Case</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OffShoreHours__c</fullName>
        <description>Number of Hours required to develop- Off-Shore</description>
        <label>Off Shore Hours</label>
        <precision>3</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Origin__c</fullName>
        <description>Reference to the item and / or individual from which / whom this requirement originated</description>
        <inlineHelpText>Enter a reference to the item and / or individual from which / whom this requirement originated</inlineHelpText>
        <label>Origin</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Original_SOW__c</fullName>
        <description>Was this requirement part of the original SOW or added as part of the Change Order?</description>
        <label>Original SOW</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Original SOW</fullName>
                </value>
                <value>
                    <fullName>Change Order</fullName>
                </value>
                <value>
                    <fullName>Change Order 2</fullName>
                </value>
                <value>
                    <fullName>CO 3</fullName>
                </value>
                <value>
                    <fullName>Final</fullName>
                    <default>true</default>
                    <label>Final</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PR_able__c</fullName>
        <defaultValue>false</defaultValue>
        <label>PR-able</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Parent_Requirement__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Requirement</label>
        <referenceTo>Requirement__c</referenceTo>
        <relationshipLabel>Sub Requirements</relationshipLabel>
        <relationshipName>Sub_Requirements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Phase__c</fullName>
        <label>Phase</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Phase 1</fullName>
                </value>
                <value>
                    <fullName>SoW / CO</fullName>
                </value>
                <value>
                    <fullName>Future Phase</fullName>
                </value>
                <value>
                    <fullName>Phase 2</fullName>
                </value>
                <value>
                    <fullName>Phase 3</fullName>
                    <default>true</default>
                    <label>Phase 3</label>
                </value>
                <value>
                    <fullName>Phase 4</fullName>
                </value>
                <value>
                    <fullName>Phase 5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <label>Priority</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1a. Must have for UAT on 6/14</fullName>
                </value>
                <value>
                    <fullName>1b. Must Have for 6/24- Advanced Go-Live</fullName>
                </value>
                <value>
                    <fullName>2. Must have for full Go-Live including Project Accounting</fullName>
                </value>
                <value>
                    <fullName>3. Nice to have for 6/24 Go-Live</fullName>
                </value>
                <value>
                    <fullName>4. Nice to have for final Go-Live</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Process_Name__c</fullName>
        <formula>Applies_to_Process__r.Process__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Process Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Process__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Process</label>
        <referenceTo>Process__c</referenceTo>
        <relationshipName>Requirements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <label>Project</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>PSE Implementation</fullName>
                    <default>true</default>
                    <label>PSE Implementation</label>
                </value>
                <value>
                    <fullName>A</fullName>
                </value>
                <value>
                    <fullName>B</fullName>
                </value>
                <value>
                    <fullName>C</fullName>
                </value>
                <value>
                    <fullName>D</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Rank__c</fullName>
        <label>Rank</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Review_Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Under Scope Review</fullName>
                    <color>#CC33CC</color>
                    <label>Under Scope Review</label>
                </value>
                <value>
                    <fullName>In Analysis</fullName>
                    <color>#FF0000</color>
                    <label>In Analysis</label>
                </value>
                <value>
                    <fullName>In Implementation</fullName>
                    <color>#F3D904</color>
                    <label>In Implementation</label>
                </value>
                <value>
                    <fullName>Ready to Test</fullName>
                    <color>#8F6429</color>
                    <label>Ready to Test</label>
                </value>
                <value>
                    <fullName>Completed</fullName>
                    <color>#33CC00</color>
                    <label>Completed</label>
                </value>
                <value>
                    <fullName>Out-of-the-box Functionality</fullName>
                    <color>#78C953</color>
                    <label>Out-of-the-box Functionality</label>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                    <color>#BBBBBB</color>
                    <label>Rejected</label>
                </value>
                <value>
                    <fullName>Duplicate</fullName>
                    <color>#BBBBBB</color>
                    <label>Duplicate</label>
                </value>
                <value>
                    <fullName>Pending CO</fullName>
                    <color>#FF6600</color>
                    <label>Pending CO</label>
                </value>
                <value>
                    <fullName>Pending Feature Request</fullName>
                    <color>#FF99FF</color>
                    <label>Pending Feature Request</label>
                </value>
                <value>
                    <fullName>Pending New Product Release</fullName>
                    <color>#CC66CC</color>
                    <label>Pending New Product Release</label>
                </value>
                <value>
                    <fullName>For Future Consideration</fullName>
                    <color>#F96FB7</color>
                    <label>For Future Consideration</label>
                </value>
                <value>
                    <fullName>Note</fullName>
                    <color>#999999</color>
                    <label>Note</label>
                </value>
                <value>
                    <fullName>Not Reviewed</fullName>
                    <default>true</default>
                    <label>Not Reviewed</label>
                </value>
                <value>
                    <fullName>Reviewed</fullName>
                </value>
                <value>
                    <fullName>Reviewed by Team Lead</fullName>
                </value>
                <value>
                    <fullName>Reviewed by Project Lead</fullName>
                </value>
                <value>
                    <fullName>Approved by Executives</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Size__c</fullName>
        <label>Size</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Test_Case_Count__c</fullName>
        <label>Test Case Count</label>
        <summaryForeignKey>Test_Cases__c.Requirements__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <label>Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Use_Case_Name__c</fullName>
        <formula>Applies_to_Use_Case__r.Use_Case__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Use Case Name</label>
        <type>Text</type>
    </fields>
    <label>Requirement</label>
    <nameField>
        <displayFormat>RQ-{0000}</displayFormat>
        <label>Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Requirements</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>